--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>GEEP</h1>
     <hr>
+    <h5>Look at a Geep</h5>
+    <img src="cuteGeep.jpg" alt="Picture of a Geep">
+    <hr>
     <h2>What is a GEEP</h2>
     <p> A geep is a domestic sheep-goat hybrid, even if look similar and in the same family having a geep is rare, why? <br> It's because they're from an entirely different genus from another! </p>
     <h3>An Unordered list of Fun Facts About Them</h3>
@@ -17,15 +20,66 @@
         <li>The geep hybrid is different from a sheep-goat chimera, the latter are artificially created by combining the embryos of a goat and sheep unlike being mated.</li>
         <li>They are also known as a Shoat</li>
     </ul>        
-    <h4> An Ordered List Of Confirmed Geeps</h4>
+    <h3> An Ordered List Of Confirmed Geeps</h3>
     <ol>
         <li> In New Zealand which resulted in a litter of Geeps, reported in a veterinary journal in 1990</li>
         <li> At the Botswana Minstry of Agriculture in 2000</li>
         <li> On a farm close to Gottingen in Germany in March 2014</li>
         <li> In Kentucky, USA in May 2021</li>
     </ol>
-    <h5> Geep</h5>
-    <img
+    <h4>Scientific Classification of A Geep</h4>
+    <table>
+        <tr>
+            <td>ROW 1</td>
+            <td>Classification</td>
+            <td>Conservation Status</td>
+            <td>Domesticated</td>
+        </tr>
+        <tr>
+            <td>ROW 2</td>
+            <td>Classification</td>
+            <td>Kingdom</td>
+            <td>Animalia</td>
+        </tr>
+        <tr>
+            <td>ROW 3</td>
+            <td>Classification</td>
+            <td>Phylum</td>
+            <td>Mammalia</td>
+        </tr>
+        <tr>
+            <td>ROW 4</td>
+            <td>Classification</td>
+            <td>Order</td>
+            <td>Artiodactyla</td>
+        </tr>
+        <tr>
+            <td>ROW 5</td>
+            <td>Classification</td>
+            <td>Family</td>
+            <td>Bovidae</td>
+        </tr>
+        <tr>
+            <td>ROW 6</td>
+            <td>Classification</td>
+            <td>Subfamily</td>
+            <td>Caprinae</td>
+        </tr>
+        <tr>
+            <td>ROW 7</td>
+            <td>Classification</td>
+            <td>Tribe</td>
+            <td>Caprini</td>
+        </tr>
+        <tr>
+            <td>ROW 8</td>
+            <td>Classification</td>
+            <td>Hybrid</td>
+            <td>Ovis aries x Capra aegagrus hircus</td>
+        </tr>
+    </table>
+    <h6> Geep</h6>
+    <img src="imgGeep.jpg" alt="It's a Geep">
 </body>
 </html>
 <!--the <i> italizes the word enclosed around it, this code makes a comment, -->
