--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <h3>An Unordered list of Fun Facts About Them</h3>
     <ul>
         <li>The genus that sheeps are from is <i>Ovis</i>, while the genus goats are from is <i>Capra</i> </li>
+            <ol>
+                <li>Ovis Ammon</li>
+                <li>Ovis Aries</li>
+                <li>Ovis Canadensis</li>
+                <li>Ovis Dalli</li>
+                <li>Ovis Gmelini</li>
+                <li>Ovis Nivicola</li>
+                <li>Ovis Vignei</li>
+                <li>Ovis Gracillis</li>
+                <li>Capra sibirica</li>
+                <li>Capra falconeri</li>
+                <li>Capra hircus</li>
+                <li>Capra aegagrus</li>
+                <li>Capra cylindricornis</li>
+                <li>Capra caucasica</li>
         <li>The genus <i>Ovis</i> has 54 chromosomes while the genus <i>Capra</i> has 60 chromosomes </li>
         <li>The geep hybrid is different from a sheep-goat chimera, the latter are artificially created by combining the embryos of a goat and sheep unlike being mated.</li>
         <li>They are also known as a Shoat</li>
