Finished For Now

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 <li>Capra aegagrus</li>
                 <li>Capra cylindricornis</li>
                 <li>Capra caucasica</li>
+                <li>Capra ibex</li>
+                <li>Capra pyrenaica</li>
+                <li>Capra nubiana</li>
+                <li>Capra walie</li>
         <li>The genus <i>Ovis</i> has 54 chromosomes while the genus <i>Capra</i> has 60 chromosomes </li>
         <li>The geep hybrid is different from a sheep-goat chimera, the latter are artificially created by combining the embryos of a goat and sheep unlike being mated.</li>
         <li>They are also known as a Shoat</li>
@@ -42,6 +46,10 @@
         <li> On a farm close to Gottingen in Germany in March 2014</li>
         <li> In Kentucky, USA in May 2021</li>
     </ol>
+    <hr>
+    <h5>Look at Another Geep</h5>
+    <a href="https://www.lindblomeagles.org/"><img src="anothersGeep.jpg" alt="Photo Of A Geep"></a>
+    <hr>
     <h4>Scientific Classification of A Geep</h4>
     <table>
         <tr>
@@ -93,8 +101,12 @@
             <td>Ovis aries x Capra aegagrus hircus</td>
         </tr>
     </table>
+    <a href="pageOne.html">More Geep</a>
+    <br>
+    <a href="pageTwo.html">Even More Geep!</a>
     <h6> Geep</h6>
     <img src="imgGeep.jpg" alt="It's a Geep">
+    
 </body>
 </html>
 <!--the <i> italizes the word enclosed around it, this code makes a comment, -->
