--- a/index.html
+++ b/index.html
@@ -109,4 +109,4 @@
     
 </body>
 </html>
-<!--the <i> italizes the word enclosed around it, this code makes a comment, -->
+<!--the <i> italizes the word enclosed around it, this code makes a comment, img src imports a photo from inside the codespace-->
