--- a/pageOne.html
+++ b/pageOne.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1>Just Another Geep</h1>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="anothersGeep.jpg" alt="Photo Of A Geep"></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="geepMom.jpg" alt="Photo Of A Geep"></a>
     <hr>
     
 </body>
